--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,15 @@ Music/*
 */Audio/*
 */Music/*
 
+# Light-O-Rama Files
+*.lms
+*.lsv
+*.lcs
+*.las
+
 # Compiled Sequences
 *.fseq
+*.zcpp
 
 # Desktop.ini and Customized Folder Icons
 # desktop.ini
@@ -40,3 +47,8 @@ PreviewVids/*
 ./PreviewVids/*
 Videos/*
 ./Videos/*
+Presets/Paid*
+./Presets/Paid*
+
+#System Junk
+*/Thumbs.db
